minor changes for run performance

--- a/workspace/sfn_figures.ipynb
+++ b/workspace/sfn_figures.ipynb
@@ -6,8 +6,8 @@
    "id": "0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-30T15:04:44.370013Z",
-     "start_time": "2024-09-30T15:04:44.360360Z"
+     "end_time": "2024-09-30T16:50:25.553655Z",
+     "start_time": "2024-09-30T16:50:23.543619Z"
     }
    },
    "outputs": [],
@@ -49,8 +49,8 @@
    "id": "1",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-30T15:04:44.903832Z",
-     "start_time": "2024-09-30T15:04:44.440615Z"
+     "end_time": "2024-09-30T16:50:25.870102Z",
+     "start_time": "2024-09-30T16:50:25.554702Z"
     }
    },
    "outputs": [],
@@ -73,8 +73,8 @@
    "id": "3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-30T15:05:19.558348Z",
-     "start_time": "2024-09-30T15:04:44.907901Z"
+     "end_time": "2024-09-30T16:51:18.350847Z",
+     "start_time": "2024-09-30T16:50:25.873241Z"
     }
    },
    "outputs": [],
@@ -107,7 +107,7 @@
     "# this pipeline makes the latent space\n",
     "p1 = Pipeline([\n",
     "    CenteringTransformer(init_size=100, input_streams={0:'X'}, output_streams={0:0}),\n",
-    "    KernelSmoother(tau=0.04/d.bin_width, input_streams={0:'X'}, output_streams={0:0}),\n",
+    "    KernelSmoother(tau=0.12/d.bin_width, input_streams={0:'X'}, output_streams={0:0}),\n",
     "    # zst:=ZScoringTransformer(init_size=10/d.beh_pos.dt, freeze_after_init=False, input_streams={1:'X'}, output_streams={1:1}),\n",
     "    Concatenator(input_streams={0: 0, 1: 1}, output_streams={0:2, 1:2, 'skip':-1}),\n",
     "])\n",
@@ -157,7 +157,7 @@
     ")\n",
     "\n",
     "\n",
-    "exit_time = 40 if shortrun else 600\n",
+    "exit_time = 40 if shortrun else 300\n",
     "\n",
     "pbar = tqdm(total=exit_time)\n",
     "pro_latents = []\n",
@@ -235,6 +235,7 @@
     "        beh_predictions.append(ArrayWithTime(alpha_to_beh_reg.predict(alpha_pred), t=prediction_t))\n",
     "        neural_predictions.append(ArrayWithTime(alpha_to_neural_reg.predict(alpha_pred), t=prediction_t))\n",
     "        joint_predictions.append(ArrayWithTime(alpha_to_joint_latents_reg.predict(alpha_pred), t=prediction_t))\n",
+    "    \n",
     "\n",
     "    if output.t >= exit_time:\n",
     "        break\n",
@@ -265,8 +266,8 @@
    "id": "4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-30T15:05:20.156780Z",
-     "start_time": "2024-09-30T15:05:19.561750Z"
+     "end_time": "2024-09-30T16:51:18.978606Z",
+     "start_time": "2024-09-30T16:51:18.354236Z"
     }
    },
    "outputs": [],
@@ -296,11 +297,7 @@
     "    ),\n",
     "    ]\n",
     "adaptive_latents.plotting_functions = reload(adaptive_latents.plotting_functions)\n",
-    "adaptive_latents.plotting_functions.plot_bw_pipeline([bw], behavior_dicts)\n",
-    "\n",
-    "fig, ax = plt.subplots()\n",
-    "ax.matshow(bw.log['alpha'][-300:])\n",
-    "ax.set_title('alpha')"
+    "adaptive_latents.plotting_functions.plot_bw_pipeline([bw], behavior_dicts)"
    ]
   },
   {
@@ -309,8 +306,8 @@
    "id": "5",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-30T15:05:20.940482Z",
-     "start_time": "2024-09-30T15:05:20.157676Z"
+     "end_time": "2024-09-30T16:51:19.488262Z",
+     "start_time": "2024-09-30T16:51:18.979930Z"
     }
    },
    "outputs": [],
@@ -360,15 +357,15 @@
    "id": "6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-30T15:05:21.002541Z",
-     "start_time": "2024-09-30T15:05:20.941047Z"
+     "end_time": "2024-09-30T16:51:19.552948Z",
+     "start_time": "2024-09-30T16:51:19.488802Z"
     }
    },
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots()\n",
     "\n",
-    "latents = pro_latents\n",
+    "latents = jpca_latents\n",
     "\n",
     "dim_1, dim_2 = 0,1\n",
     "pf.plot_history_with_tail(ax, latents, dim_1=dim_1, dim_2=dim_2)\n",
@@ -386,8 +383,44 @@
    "id": "7",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-30T15:05:21.980503Z",
-     "start_time": "2024-09-30T15:05:21.969868Z"
+     "end_time": "2024-09-30T16:51:19.616639Z",
+     "start_time": "2024-09-30T16:51:19.553446Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "fig, ax = plt.subplots()\n",
+    "ax.matshow(bw.log['alpha'][-300:])\n",
+    "ax.set_title('alpha')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-30T16:51:19.708222Z",
+     "start_time": "2024-09-30T16:51:19.617293Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "fig, ax = plt.subplots()\n",
+    "d.plot_variances(ax)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-30T16:51:19.836533Z",
+     "start_time": "2024-09-30T16:51:19.708889Z"
     }
    },
    "outputs": [],
@@ -410,7 +443,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8",
+   "id": "10",
    "metadata": {},
    "source": [
     "## Intro video"
@@ -419,8 +452,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
-   "metadata": {},
+   "id": "11",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-30T16:51:19.837261Z",
+     "start_time": "2024-09-30T16:51:19.837208Z"
+    }
+   },
    "outputs": [],
    "source": [
     "d = datasets.Odoherty21Dataset()\n",
