adds ability to zero out streams in Concatenators

--- a/workspace/sfn_figures.ipynb
+++ b/workspace/sfn_figures.ipynb
@@ -6,8 +6,8 @@
    "id": "0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-30T16:50:25.553655Z",
-     "start_time": "2024-09-30T16:50:23.543619Z"
+     "end_time": "2024-09-30T18:28:47.347895Z",
+     "start_time": "2024-09-30T18:28:45.571810Z"
     }
    },
    "outputs": [],
@@ -49,8 +49,8 @@
    "id": "1",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-30T16:50:25.870102Z",
-     "start_time": "2024-09-30T16:50:25.554702Z"
+     "end_time": "2024-09-30T18:28:47.527130Z",
+     "start_time": "2024-09-30T18:28:47.348790Z"
     }
    },
    "outputs": [],
@@ -73,8 +73,10 @@
    "id": "3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-30T16:51:18.350847Z",
-     "start_time": "2024-09-30T16:50:25.873241Z"
+     "start_time": "2024-09-30T18:43:32.124284Z"
+    },
+    "jupyter": {
+     "is_executing": true
     }
    },
    "outputs": [],
@@ -106,10 +108,10 @@
     "\n",
     "# this pipeline makes the latent space\n",
     "p1 = Pipeline([\n",
-    "    CenteringTransformer(init_size=100, input_streams={0:'X'}, output_streams={0:0}),\n",
-    "    KernelSmoother(tau=0.12/d.bin_width, input_streams={0:'X'}, output_streams={0:0}),\n",
-    "    # zst:=ZScoringTransformer(init_size=10/d.beh_pos.dt, freeze_after_init=False, input_streams={1:'X'}, output_streams={1:1}),\n",
-    "    Concatenator(input_streams={0: 0, 1: 1}, output_streams={0:2, 1:2, 'skip':-1}),\n",
+    "    neural_centerer:=CenteringTransformer(init_size=100, input_streams={0:'X'}, output_streams={0:0}),\n",
+    "    CenteringTransformer(init_size=100, input_streams={1:'X'}, output_streams={1:1}),\n",
+    "    nerual_smoother:=KernelSmoother(tau=0.12/d.bin_width, input_streams={0:'X'}, output_streams={0:0}),\n",
+    "    Concatenator(input_streams={0: 0, 1: 1}, output_streams={0:2, 1:2, 'skip':-1}, zero_sreams={}),\n",
     "])\n",
     "\n",
     "pro=proSVD(k=6, init_size=100, input_streams={2:'X'}, output_streams={2:2})\n",
@@ -141,8 +143,8 @@
     ")\n",
     "\n",
     "neural_only_reg_pipeline = Pipeline([\n",
-    "    CenteringTransformer(**(p1.steps[0].get_params() | dict(input_streams={4:'X'}, output_streams={4:4}))),\n",
-    "    KernelSmoother(**(p1.steps[1].get_params() | dict(input_streams={4:'X'}, output_streams={4:4}))),\n",
+    "    CenteringTransformer(**(neural_centerer.get_params() | dict(input_streams={4:'X'}, output_streams={4:4}))),\n",
+    "    KernelSmoother(**(nerual_smoother.get_params() | dict(input_streams={4:'X'}, output_streams={4:4}))),\n",
     "    proSVD(k=4, init_size=100, input_streams={4:'X'}, output_streams={4:4}),\n",
     "    alpha_to_neural_reg:=VanillaOnlineRegressor(\n",
     "        input_streams={2:'X', 4:'Y'},\n",
@@ -266,8 +268,8 @@
    "id": "4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-30T16:51:18.978606Z",
-     "start_time": "2024-09-30T16:51:18.354236Z"
+     "end_time": "2024-09-30T18:29:42.110700Z",
+     "start_time": "2024-09-30T18:29:41.554069Z"
     }
    },
    "outputs": [],
@@ -306,8 +308,8 @@
    "id": "5",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-30T16:51:19.488262Z",
-     "start_time": "2024-09-30T16:51:18.979930Z"
+     "end_time": "2024-09-30T18:43:16.121055Z",
+     "start_time": "2024-09-30T18:43:15.611323Z"
     }
    },
    "outputs": [],
@@ -315,6 +317,9 @@
     "%matplotlib inline\n",
     "fig, axs = plt.subplots(nrows=3, ncols=2, squeeze=False, layout='tight', figsize=(10,10))\n",
     "\n",
+    "e1, e2 = np.zeros(6), np.zeros(6)\n",
+    "e1[0] = 1\n",
+    "e2[1] = 1\n",
     "\n",
     "for idx, latents in enumerate([pro_latents, jpca_latents, ica_latents]):\n",
     "    ax = axs[idx, 0]\n",
@@ -322,20 +327,33 @@
     "\n",
     "    d_latents = np.diff(latents, axis=0)\n",
     "    d_latents = d_latents / np.linalg.norm(d_latents, axis=1)[:, np.newaxis]\n",
-    "    ax.quiver(latents[:-1, 0], latents[:-1, 1], d_latents[:, 0], d_latents[:, 1], scale=1 / 20, units='dots')\n",
+    "    # ax.quiver(latents[:-1] @ e1, latents[:-1]@e2, d_latents@e1, d_latents@e2, scale=1 / 20, units='dots', alpha=.5)\n",
     "    x1, x2, y1, y2 = ax.axis()\n",
-    "    x_points = np.linspace(x1, x2, 10)\n",
-    "    y_points = np.linspace(y1, y2, 10)\n",
-    "    mgrid = np.meshgrid(*[np.linspace(latents[:, i].min(), latents[:, i].max(), 10) for i in range(latents.shape[1])])\n",
-    "    \n",
+    "    x_points = np.linspace(x1, x2, 51)\n",
+    "    y_points = np.linspace(y1, y2, 51)\n",
+    "    # mgrid = np.meshgrid(*[np.linspace(latents[:, i].min(), latents[:, i].max(), 10) for i in range(2)])\n",
+    "    origins = []\n",
+    "    arrows = []\n",
+    "    for i in range(len(x_points)-1):\n",
+    "        for j in range(len(y_points)-1):\n",
+    "            proj_1 = (latents[:-1] @ e1)\n",
+    "            proj_2 = (latents[:-1] @ e2)\n",
+    "            s = (x_points[i] <= proj_1) & (proj_1 < x_points[i+1]) & (y_points[j] <= proj_2) & (proj_2 < y_points[j+1])\n",
+    "            if s.sum():\n",
+    "                arrow = d_latents[s].mean(axis=0)\n",
+    "                arrow = arrow / np.linalg.norm(arrow)\n",
+    "                arrows.append(arrow)\n",
+    "                origins.append([x_points[i:i+2].mean(), y_points[j:j+2].mean()])\n",
+    "    origins, arrows = np.array(origins), np.array(arrows)\n",
+    "    ax.quiver(origins[:,0], origins[:,1], arrows@e1, arrows@e2, scale=1 / 20, units='dots', color='red') \n",
+    "            \n",
+    "\n",
     "    ax.axis('equal')\n",
     "\n",
     "    ax = axs[idx, 1]\n",
     "\n",
     "\n",
-    "e1, e2 = np.zeros(6), np.zeros(6)\n",
-    "e1[0] = 1\n",
-    "e2[1] = 1\n",
+    "\n",
     "\n",
     "axs[0,1].plot(pro.inverse_transform(e1, 2))\n",
     "axs[0,1].plot(pro.inverse_transform(e2, 2))\n",
@@ -347,8 +365,7 @@
     "\n",
     "axs[2,1].plot(pro.inverse_transform(ica.inverse_transform(e1, 2), 2))\n",
     "axs[2,1].plot(pro.inverse_transform(ica.inverse_transform(e2, 2), 2))\n",
-    "axs[2,0].set_ylabel('ica')\n",
-    "\n"
+    "axs[2,0].set_ylabel('ica')\n"
    ]
   },
   {
@@ -357,8 +374,27 @@
    "id": "6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-30T16:51:19.552948Z",
-     "start_time": "2024-09-30T16:51:19.488802Z"
+     "end_time": "2024-09-30T18:29:42.819954Z",
+     "start_time": "2024-09-30T18:29:42.817872Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "i = 0\n",
+    "j = 0\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-30T18:29:42.940969Z",
+     "start_time": "2024-09-30T18:29:42.820422Z"
     }
    },
    "outputs": [],
@@ -380,11 +416,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7",
+   "id": "8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-30T16:51:19.616639Z",
-     "start_time": "2024-09-30T16:51:19.553446Z"
+     "end_time": "2024-09-30T18:29:43.106176Z",
+     "start_time": "2024-09-30T18:29:42.941794Z"
     }
    },
    "outputs": [],
@@ -399,11 +435,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "9",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-30T16:51:19.708222Z",
-     "start_time": "2024-09-30T16:51:19.617293Z"
+     "end_time": "2024-09-30T18:29:43.197942Z",
+     "start_time": "2024-09-30T18:29:43.107035Z"
     }
    },
    "outputs": [],
@@ -416,11 +452,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
+   "id": "10",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-30T16:51:19.836533Z",
-     "start_time": "2024-09-30T16:51:19.708889Z"
+     "end_time": "2024-09-30T18:29:43.324132Z",
+     "start_time": "2024-09-30T18:29:43.198997Z"
     }
    },
    "outputs": [],
@@ -443,7 +479,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10",
+   "id": "11",
    "metadata": {},
    "source": [
     "## Intro video"
@@ -452,13 +488,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-09-30T16:51:19.837261Z",
-     "start_time": "2024-09-30T16:51:19.837208Z"
-    }
-   },
+   "id": "12",
+   "metadata": {},
    "outputs": [],
    "source": [
     "d = datasets.Odoherty21Dataset()\n",
