moves the regression pipeline into a .py file

--- a/workspace/sfn_figures.ipynb
+++ b/workspace/sfn_figures.ipynb
@@ -6,8 +6,8 @@
    "id": "0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-30T22:37:56.820229Z",
-     "start_time": "2024-09-30T22:37:55.107701Z"
+     "end_time": "2024-09-30T23:06:41.765477Z",
+     "start_time": "2024-09-30T23:06:39.860925Z"
     }
    },
    "outputs": [],
@@ -28,8 +28,8 @@
    "id": "1",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-30T22:37:57.970570Z",
-     "start_time": "2024-09-30T22:37:57.643892Z"
+     "end_time": "2024-09-30T23:06:42.054460Z",
+     "start_time": "2024-09-30T23:06:41.766589Z"
     }
    },
    "outputs": [],
@@ -52,15 +52,15 @@
    "id": "3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-30T22:39:39.940269Z",
-     "start_time": "2024-09-30T22:38:06.369471Z"
+     "end_time": "2024-09-30T23:19:01.782118Z",
+     "start_time": "2024-09-30T23:17:37.715819Z"
     }
    },
    "outputs": [],
    "source": [
     "runs = []\n",
     "\n",
-    "to_try = np.linspace(0, 0.25, 2)\n",
+    "to_try = np.linspace(0, 0.25, 6*5)\n",
     "for x in to_try:\n",
     "    run = prp.PipelineRun(neural_lag=x)\n",
     "    runs.append(run)\n",
@@ -73,8 +73,8 @@
    "id": "4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-30T22:39:46.113052Z",
-     "start_time": "2024-09-30T22:39:45.499611Z"
+     "end_time": "2024-09-30T23:19:01.982356Z",
+     "start_time": "2024-09-30T23:19:01.788867Z"
     }
    },
    "outputs": [],
@@ -93,14 +93,14 @@
    "id": "5",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-30T22:40:42.683731Z",
-     "start_time": "2024-09-30T22:40:42.049693Z"
+     "end_time": "2024-09-30T23:53:08.522281Z",
+     "start_time": "2024-09-30T23:53:07.801667Z"
     }
    },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
-    "runs[0].plot_results()\n"
+    "run.plot_results()\n"
    ]
   },
   {
@@ -109,8 +109,8 @@
    "id": "6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-30T22:40:04.439564Z",
-     "start_time": "2024-09-30T22:40:03.778117Z"
+     "end_time": "2024-09-30T23:53:14.481828Z",
+     "start_time": "2024-09-30T23:53:13.582992Z"
     }
    },
    "outputs": [],
@@ -168,7 +168,12 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "7",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-30T23:19:03.138552Z",
+     "start_time": "2024-09-30T23:19:02.874639Z"
+    }
+   },
    "outputs": [],
    "source": [
     "assert isinstance(d, datasets.Zong22Dataset)\n",
