adds nrmse plots to the SFN notebook

--- a/workspace/sfn_figures.ipynb
+++ b/workspace/sfn_figures.ipynb
@@ -54,10 +54,12 @@
     "ExecuteTime": {
      "end_time": "2024-09-30T23:19:01.782118Z",
      "start_time": "2024-09-30T23:17:37.715819Z"
-    }
+    },
+    "scrolled": true
    },
    "outputs": [],
    "source": [
+    "%%time\n",
     "runs = []\n",
     "\n",
     "to_try = np.linspace(0, 0.25, 6*5)\n",
@@ -79,12 +81,16 @@
    },
    "outputs": [],
    "source": [
-    "\n",
-    "fig, axs = plt.subplots(nrows=3,squeeze=False, figsize=(4,5), sharex=True)\n",
-    "axs[0,0].plot(to_try, np.array([run.beh_correlations for run in runs]))\n",
-    "axs[1,0].plot(to_try, np.array([run.neural_correlations for run in runs]))\n",
-    "axs[2,0].plot(to_try, np.array([run.joint_correlations for run in runs]));\n",
-    "\n"
+    "fig, axs = plt.subplots(nrows=3, ncols=2, squeeze=False, figsize=(4*2,5), sharex=True)\n",
+    "for idx, target_str in enumerate(['beh', 'neural', 'joint']):\n",
+    "    correlations = np.array([getattr(run, f'{target_str}_correlations') for run in runs])\n",
+    "    mses = np.array([getattr(run, f'{target_str}_nrmses') for run in runs])\n",
+    "    for jdx, metric in enumerate([correlations, mses]):\n",
+    "        axs[idx,jdx].plot(to_try, metric)\n",
+    "        metric = -metric if jdx == 1 else metric\n",
+    "        best_tried = to_try[np.argmax(metric.sum(axis=1))]\n",
+    "        axs[idx, jdx].axvline(best_tried, color='k')\n",
+    "        axs[idx, jdx].text(.99, .99, f'{best_tried:.3f}', ha='right', va='top', transform=axs[idx, jdx].transAxes)\n"
    ]
   },
   {
@@ -100,7 +106,9 @@
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
-    "run.plot_results()\n"
+    "runs[-1].plot_results()\n",
+    "\n",
+    "# plt.gcf().axes[-2].set_xlim([550, 600])\n"
    ]
   },
   {
