adds Zong22 dataset to SFN plots

--- a/workspace/sfn_figures.ipynb
+++ b/workspace/sfn_figures.ipynb
@@ -54,17 +54,19 @@
     "ExecuteTime": {
      "end_time": "2024-09-30T23:19:01.782118Z",
      "start_time": "2024-09-30T23:17:37.715819Z"
-    },
-    "scrolled": true
+    }
    },
    "outputs": [],
    "source": [
     "%%time\n",
     "runs = []\n",
     "\n",
-    "to_try = np.linspace(0, 0.25, 6*5)\n",
+    "to_try = np.linspace(0, 0.25, 1)\n",
     "for x in to_try:\n",
-    "    run = prp.PipelineRun(neural_lag=x)\n",
+    "    run = prp.PipelineRun(\n",
+    "        neural_lag=x, dataset='zong22', exit_time=-1, \n",
+    "        pos_scale=1, hd_scale=1, h2b_scale=1\n",
+    "    )\n",
     "    runs.append(run)\n",
     "\n"
    ]
@@ -115,6 +117,16 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.hist(np.nanstd(run.d.behavioral_data.a[:,:,2], axis=0).flatten()) # 1200"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-09-30T23:53:14.481828Z",
@@ -175,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7",
+   "id": "8",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-09-30T23:19:03.138552Z",
@@ -184,26 +196,26 @@
    },
    "outputs": [],
    "source": [
-    "assert isinstance(d, datasets.Zong22Dataset)\n",
-    "desired_pattern = np.mean(latents[-101:-1], axis=0)\n",
-    "current_pattern = latents[-1]\n",
-    "desired_stim = desired_pattern - current_pattern\n",
-    "\n",
-    "desired_pattern = (desired_stim @ pro.Q.T)[:d.neural_data.a.shape[-1]]\n",
-    "\n",
-    "near_zero = np.abs(desired_stim) < 100\n",
-    "print(near_zero.sum())\n",
-    "desired_stim[near_zero] = np.nan\n",
-    "\n",
-    "\n",
-    "fig, ax = plt.subplots()\n",
-    "d.show_stim_pattern(ax, np.abs(desired_pattern))\n"
+    "if isinstance(run.d, datasets.Zong22Dataset):\n",
+    "    desired_pattern = np.mean(latents[-101:-1], axis=0)\n",
+    "    current_pattern = latents[-1]\n",
+    "    desired_stim = desired_pattern - current_pattern\n",
+    "    \n",
+    "    desired_pattern = (desired_stim @ run.pro.Q.T)[:run.d.neural_data.a.shape[-1]]\n",
+    "    \n",
+    "    near_zero = np.abs(desired_stim) < 100\n",
+    "    print(near_zero.sum())\n",
+    "    desired_stim[near_zero] = np.nan\n",
+    "    \n",
+    "    \n",
+    "    fig, ax = plt.subplots()\n",
+    "    run.d.show_stim_pattern(ax, np.abs(desired_pattern))\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +235,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9",
+   "id": "10",
    "metadata": {},
    "source": [
     "## Intro video"
@@ -232,7 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "11",
    "metadata": {},
    "outputs": [],
    "source": [
