adds parameters for Zong22 hyperparameter search

--- a/workspace/sfn_figures.ipynb
+++ b/workspace/sfn_figures.ipynb
@@ -64,8 +64,18 @@
     "to_try = np.linspace(0, 0.25, 1)\n",
     "for x in to_try:\n",
     "    run = prp.PipelineRun(\n",
-    "        neural_lag=x, dataset='zong22', exit_time=-1, \n",
-    "        pos_scale=1, hd_scale=1, h2b_scale=1\n",
+    "        bw_step=10**-1.5,\n",
+    "        neural_smoothing_tau=.12,\n",
+    "        n_bubbles=1100,\n",
+    "        pos_scale=1/160, hd_scale=1/1.8, h2b_scale=1/8.5,\n",
+    "        concat_stream_scaling_factors={0:1/1000, 1:1},\n",
+    "        neural_lag=0,\n",
+    "        concat_zero_streams=(),\n",
+    "        latents_for_bw='jpca',\n",
+    "        pre_bw_latent_dims_to_drop=0,\n",
+    "        alpha_pred_method='normal',\n",
+    "        exit_time=400,\n",
+    "        dataset='zong22',\n",
     "    )\n",
     "    runs.append(run)\n",
     "\n"
@@ -75,6 +85,19 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
+    "runs[-1].plot_results()\n",
+    "\n",
+    "# plt.gcf().axes[-2].set_xlim([550, 600])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-09-30T23:19:01.982356Z",
@@ -98,29 +121,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-09-30T23:53:08.522281Z",
-     "start_time": "2024-09-30T23:53:07.801667Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%matplotlib inline\n",
-    "runs[-1].plot_results()\n",
-    "\n",
-    "# plt.gcf().axes[-2].set_xlim([550, 600])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.hist(np.nanstd(run.d.behavioral_data.a[:,:,2], axis=0).flatten()) # 1200"
+    "plt.hist(np.nanstd(run.d.neural_data.a[:,:,:], axis=0).flatten()) # 170, 156, 1.8, 8.5"
    ]
   },
   {
