sets up interruptable Zong22 hyperparameter exploration

--- a/workspace/sfn_figures.ipynb
+++ b/workspace/sfn_figures.ipynb
@@ -19,6 +19,7 @@
     "import matplotlib.pyplot as plt\n",
     "import prediction_regression_pipeline as prp\n",
     "from importlib import reload\n",
+    "from IPython import display\n",
     "\n"
    ]
   },
@@ -50,6 +51,25 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def binary_search_range(a, b, n_samples=None):\n",
+    "    to_try = sorted([a,b])\n",
+    "    yield from to_try\n",
+    "\n",
+    "    while n_samples is None or len(to_try) < n_samples:\n",
+    "        to_try = sorted(to_try)\n",
+    "        idx = np.argmax(np.diff(to_try))\n",
+    "        new_x = (to_try[idx] + to_try[idx+1])/2\n",
+    "        to_try.append(new_x)\n",
+    "        yield new_x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-09-30T23:19:01.782118Z",
@@ -59,32 +79,28 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "runs = []\n",
     "\n",
-    "to_try = np.linspace(0, 0.25, 1)\n",
-    "for x in to_try:\n",
-    "    run = prp.PipelineRun(\n",
-    "        bw_step=10**-1.5,\n",
-    "        neural_smoothing_tau=.12,\n",
-    "        n_bubbles=1100,\n",
-    "        pos_scale=1/160, hd_scale=1/1.8, h2b_scale=1/8.5,\n",
-    "        concat_stream_scaling_factors={0:1/1000, 1:1},\n",
-    "        neural_lag=0,\n",
-    "        concat_zero_streams=(),\n",
-    "        latents_for_bw='jpca',\n",
-    "        pre_bw_latent_dims_to_drop=0,\n",
-    "        alpha_pred_method='normal',\n",
-    "        exit_time=400,\n",
-    "        dataset='zong22',\n",
-    "    )\n",
+    "runs = []\n",
+    "tried = []\n",
+    "fig, axs = None, None\n",
+    "\n",
+    "for x in binary_search_range(1e-10,1):\n",
+    "    parameters = dict(prp.PipelineRun.default_parameter_values['zong22'])\n",
+    "    parameters['neural_smoothing_tau'] = x\n",
+    "    run = prp.PipelineRun(**parameters)\n",
     "    runs.append(run)\n",
+    "    tried.append(x)\n",
+    "    \n",
+    "    fig, axs = prp.PipelineRun.compare_metrics_across_runs(tried, runs, fig, axs)\n",
+    "    display.clear_output(wait=True)\n",
+    "    display.display(fig)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4",
+   "id": "5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,41 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-09-30T23:19:01.982356Z",
-     "start_time": "2024-09-30T23:19:01.788867Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "fig, axs = plt.subplots(nrows=3, ncols=2, squeeze=False, figsize=(4*2,5), sharex=True)\n",
-    "for idx, target_str in enumerate(['beh', 'neural', 'joint']):\n",
-    "    correlations = np.array([getattr(run, f'{target_str}_correlations') for run in runs])\n",
-    "    mses = np.array([getattr(run, f'{target_str}_nrmses') for run in runs])\n",
-    "    for jdx, metric in enumerate([correlations, mses]):\n",
-    "        axs[idx,jdx].plot(to_try, metric)\n",
-    "        metric = -metric if jdx == 1 else metric\n",
-    "        best_tried = to_try[np.argmax(metric.sum(axis=1))]\n",
-    "        axs[idx, jdx].axvline(best_tried, color='k')\n",
-    "        axs[idx, jdx].text(.99, .99, f'{best_tried:.3f}', ha='right', va='top', transform=axs[idx, jdx].transAxes)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.hist(np.nanstd(run.d.neural_data.a[:,:,:], axis=0).flatten()) # 170, 156, 1.8, 8.5"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-09-30T23:53:14.481828Z",
@@ -153,7 +135,7 @@
     "\n",
     "    d_latents = np.diff(latents, axis=0)\n",
     "    d_latents = d_latents / np.linalg.norm(d_latents, axis=1)[:, np.newaxis]\n",
-    "    ax.quiver(latents[:-1] @ e1, latents[:-1]@e2, d_latents@e1, d_latents@e2, scale=1 / 20, units='dots', alpha=0)\n",
+    "    ax.quiver(latents[:-1] @ e1, latents[:-1]@e2, d_latents@e1, d_latents@e2, scale=1 / 20, units='dots', alpha=1)\n",
     "    x1, x2, y1, y2 = ax.axis()\n",
     "    x_points = np.linspace(x1, x2, 21)\n",
     "    y_points = np.linspace(y1, y2, 21)\n",
@@ -192,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "7",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-09-30T23:19:03.138552Z",
@@ -220,7 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
+   "id": "8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +222,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10",
+   "id": "9",
    "metadata": {},
    "source": [
     "## Intro video"
@@ -249,7 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "10",
    "metadata": {},
    "outputs": [],
    "source": [
