sets up interruptable Zong22 hyperparameter exploration

--- a/workspace/sfn_figures.ipynb
+++ b/workspace/sfn_figures.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "initial_id",
    "metadata": {
     "ExecuteTime": {
@@ -19,12 +19,13 @@
     "import matplotlib.pyplot as plt\n",
     "import prediction_regression_pipeline as prp\n",
     "from importlib import reload\n",
+    "from IPython import display\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "f28131f5-d629-4514-ba02-8817071a8d6a",
    "metadata": {
     "ExecuteTime": {
@@ -32,15 +33,7 @@
      "start_time": "2024-09-30T23:06:41.766589Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tycho 30a17b0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!echo $(hostname) $(git rev-parse --short HEAD)"
    ]
@@ -57,6 +50,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "8718cdde-987e-4df1-adff-45bce4276bee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def binary_search_range(a, b, n_samples=None):\n",
+    "    to_try = sorted([a,b])\n",
+    "    yield from to_try\n",
+    "\n",
+    "    while n_samples is None or len(to_try) < n_samples:\n",
+    "        to_try = sorted(to_try)\n",
+    "        idx = np.argmax(np.diff(to_try))\n",
+    "        new_x = (to_try[idx] + to_try[idx+1])/2\n",
+    "        to_try.append(new_x)\n",
+    "        yield new_x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "1582bf19c247427c",
    "metadata": {
     "ExecuteTime": {
@@ -64,62 +76,34 @@
      "start_time": "2024-09-30T23:17:37.715819Z"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7c9621eedd8743f1944582c7d5bdf0e8",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/400 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/jgould/miniconda3/envs/adaptive_latents/lib/python3.9/site-packages/numba/core/typed_passes.py:336: NumbaPerformanceWarning: \u001b[1m\n",
-      "The keyword argument 'parallel=True' was specified but no transformation for parallel execution was possible.\n",
-      "\n",
-      "To find out why, try turning on parallel diagnostics, see https://numba.readthedocs.io/en/stable/user/parallel.html#diagnostics for help.\n",
-      "\u001b[1m\n",
-      "File \"../../../miniconda3/envs/adaptive_latents/lib/python3.9/site-packages/mmica/_densities.py\", line 44:\u001b[0m\n",
-      "\u001b[1m@jit(parallel=True, fastmath=True, nopython=True)\n",
-      "\u001b[1mdef logp_u(Y):\n",
-      "\u001b[0m\u001b[1m^\u001b[0m\u001b[0m\n",
-      "\u001b[0m\n",
-      "  warnings.warn(errors.NumbaPerformanceWarning(msg,\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%time\n",
-    "runs = []\n",
     "\n",
-    "to_try = np.linspace(0, 0.25, 1)\n",
-    "for x in to_try:\n",
-    "    run = prp.PipelineRun(\n",
-    "        bw_step=10**-1.5,\n",
-    "        neural_smoothing_tau=.12,\n",
-    "        n_bubbles=1100,\n",
-    "        pos_scale=1/160, hd_scale=1/1.8, h2b_scale=1/8.5,\n",
-    "        concat_stream_scaling_factors={0:1/1000, 1:1},\n",
-    "        neural_lag=0,\n",
-    "        concat_zero_streams=(),\n",
-    "        latents_for_bw='jpca',\n",
-    "        pre_bw_latent_dims_to_drop=0,\n",
-    "        alpha_pred_method='normal',\n",
-    "        exit_time=400,\n",
-    "        dataset='zong22',\n",
-    "    )\n",
+    "runs = []\n",
+    "tried = []\n",
+    "fig, axs = None, None\n",
+    "\n",
+    "for x in binary_search_range(1e-10,1):\n",
+    "    parameters = dict(prp.PipelineRun.default_parameter_values['zong22'])\n",
+    "    parameters['neural_smoothing_tau'] = x\n",
+    "    run = prp.PipelineRun(**parameters)\n",
     "    runs.append(run)\n",
+    "    tried.append(x)\n",
+    "    \n",
+    "    fig, axs = prp.PipelineRun.compare_metrics_across_runs(tried, runs, fig, axs)\n",
+    "    display.clear_output(wait=True)\n",
+    "    display.display(fig)\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9337a338-edda-428e-a3f1-abb93a67df04",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -145,36 +129,7 @@
     }
    },
    "outputs": [],
-   "source": [
-    "fig, axs = plt.subplots(nrows=3, ncols=2, squeeze=False, figsize=(4*2,5), sharex=True)\n",
-    "for idx, target_str in enumerate(['beh', 'neural', 'joint']):\n",
-    "    correlations = np.array([getattr(run, f'{target_str}_correlations') for run in runs])\n",
-    "    mses = np.array([getattr(run, f'{target_str}_nrmses') for run in runs])\n",
-    "    for jdx, metric in enumerate([correlations, mses]):\n",
-    "        axs[idx,jdx].plot(to_try, metric)\n",
-    "        metric = -metric if jdx == 1 else metric\n",
-    "        best_tried = to_try[np.argmax(metric.sum(axis=1))]\n",
-    "        axs[idx, jdx].axvline(best_tried, color='k')\n",
-    "        axs[idx, jdx].text(.99, .99, f'{best_tried:.3f}', ha='right', va='top', transform=axs[idx, jdx].transAxes)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6d05ecdb-80ef-443e-8086-bf9fdf4afba1",
-   "metadata": {},
-   "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ff476ae0-c94a-4b13-981f-6ca5394c4b3f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.hist(np.nanstd(run.d.neural_data.a[:,:,:], axis=0).flatten()) # 170, 156, 1.8, 8.5"
-   ]
   },
   {
    "cell_type": "code",
@@ -201,7 +156,7 @@
     "\n",
     "    d_latents = np.diff(latents, axis=0)\n",
     "    d_latents = d_latents / np.linalg.norm(d_latents, axis=1)[:, np.newaxis]\n",
-    "    ax.quiver(latents[:-1] @ e1, latents[:-1]@e2, d_latents@e1, d_latents@e2, scale=1 / 20, units='dots', alpha=0)\n",
+    "    ax.quiver(latents[:-1] @ e1, latents[:-1]@e2, d_latents@e1, d_latents@e2, scale=1 / 20, units='dots', alpha=1)\n",
     "    x1, x2, y1, y2 = ax.axis()\n",
     "    x_points = np.linspace(x1, x2, 21)\n",
     "    y_points = np.linspace(y1, y2, 21)\n",
